@@ -20,6 +20,7 @@ Timothee Groleau     <kde at timotheegroleau dot com>
 Roman Tsisyk         <roman at tsisyk dot com>
 Alexandre Mendes     <alex dot mendes1988 at gmail dot com>
 Lukas Krejci         <krejci dot l at centrum dot cz>
+Alexander Potashev   <aspotashev at gmail dot com>
 
 CONTRIBUTORS:
 Frederic Coiffier    <fcoiffie at gmail dot com>
@@ -77,6 +78,7 @@ Kopete                  : Pau Garcia i Quiles
 YandexFotki             : Roman Tsisyk
 MediaWiki               : Alexandre Mendes
 RajceExport             : Lukas Krejci
+VKontakte               : Alexander Potashev
 
 PROJECT COORDINATORS:
 Gilles Caulier and Angelo Naselli
