@@ -47,6 +47,7 @@ Kopete             : A tool to export images to an instant messaging contact.
 YandexFotki        : A tool to export images to Yandex web service (http://fotki.yandex.ru).
 MediaWiki          : A tool to export images to Mediawiki based web service (http://www.mediawiki.org).
 RajceExport        : A tool to export images to Rajce web service (http://www.rajce.idnes.cz).
+Vkontackte         : A tool to export images to VKontakte web service (http://wwww.vkontakte.ru)
 
 Porting under progress to Qt4/KDE4:
 
@@ -89,6 +90,7 @@ libgomp         >= 4.3.x                        http://gcc.gnu.org/projects/gomp
 libksane        >= 0.3.0                        http://www.digikam.org/sharedlibs          Version from master KDE git repository.
 libkmap         >= 2.0.0                        http://www.digikam.org/sharedlibs          Version from master KDE git repository.
 libmediawiki    >= 1.0.0                        http://www.digikam.org/sharedlibs
+libkvkontakte   >= 0.1.0                        http://www.digikam.org/sharedlibs
 
 Plugin Specific Dependencies (for compiling and for running) :
 
@@ -109,6 +111,7 @@ FaceBook           : libqjson.
 ExpoBlending       : align_image_stack from Hugin project and enfuse from Enblend project (runtime dependency), libgomp.
 GPSSync            : libkmap.
 Mediawiki          : libmediawiki.
+Vkontackte         : libkvkontakte.
 
 -- CONTACT ------------------------------------------------------------
 
